--- a/css/style.css
+++ b/css/style.css
@@ -981,11 +981,13 @@ position: relative;
     background-color: var(--main-color);
   }
 }
-
 .main-content {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: white;
+  margin-bottom: 20px;
+  border-radius: 10px;
 }
 @media (max-width: 767px) {
   .main-content {
@@ -1033,36 +1035,52 @@ position: relative;
 .main-content .boxes {
   flex: 1;
 }
-.main-content .boxes h5 {
-  margin-bottom: 10px;
-}
-.main-content .boxes .box .general-info {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.main-content .boxes .box .general-info p {
-  width: 250px;
-  padding: 10px 0;
-}
 @media (max-width: 767px) {
-  .main-content .boxes .box .general-info p {
-    width: 100%;
+  .main-content .boxes {
     text-align: center;
   }
-.main-content .boxes .box .general-info p .toggle-button {
-    margin: 0  auto;
-  }
 }
-.main-content .boxes .box .general-info .toggle-button  {
-  top: 0;
+.main-content .boxes .box {
+  padding: 15px 0;
+  
+}
+.main-content .boxes .box:not(:last-of-type) {
+  border-bottom: 1px solid var(--separator-color);
+}
+.main-content .boxes .box > p {
+  color: var(--text-color);
+  margin-bottom: 15px;
+}
+.main-content .boxes .box .content-box {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 10px;
+}
+.main-content .boxes .box .content-box .toggle-button {
+  display: inline-block;
+  top: 10px;
   right: 0;
-  transform: translateY(0);
+}
+/* .main-content .boxes .box .content-box .toggle-button.no-active {
+  background: var(--text-color);
+}
+.main-content .boxes .box .content-box .toggle-button.no-active::before {
+  left: 3px;
+} */
+.content-profile .bottom {
+  display: flex;
+  gap: 20px;
+  padding-bottom: 20px;
+  flex-wrap: wrap;
+}
+.my-skills {
+  flex: 1;
+  background: white;
+  padding: 15px;
+  border-radius: 10px;
 }
 .my-skills .box {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 .my-skills .box:not(:last-child) {
   border-bottom: 1px solid var(--border-color);
@@ -1074,23 +1092,41 @@ position: relative;
   border-radius: 10px;
   margin: 10px;
 }
+.latest-activities {
+  flex: 2;
+  background: white;
+  padding: 15px;
+  border-radius: 20px;
+}
 .latest-activities .box {
   display: flex;
   gap: 10px;
+  align-items: center;
+  padding: 20px 0;
+}
+.latest-activities .box:not(:last-of-type) {
+  border-bottom: 1px solid var(--separator-color);
 }
 .latest-activities .box img {
   width: 70px;
 }
 .latest-activities .box .info {
+  flex: 1;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
-.latest-activities .box .info .inner-box-right p {
+.latest-activities .box .info .inner-box-left p {
    margin-top: 10px;
    color: var(--text-color);
 }
-.latest-activities .box .info  span {
+.latest-activities .box .info .inner-box-right  span {
   display: block;
+  margin-bottom: 5px;
+  text-align: right;
+}
+.latest-activities .box .info .inner-box-right span:last-of-type {
+  color: var(--text-color);
 }
 .project {
   position: relative;
@@ -1481,4 +1517,94 @@ position: relative;
   to {
     transform: translateY(-5px);
   }
+}
+.content-plans {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  gap: 20px;
+  padding: 15px 0;
+}
+@media (max-width: 767px) {
+  .content-plans {
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+  }
+}
+.content-plans .plan {
+  padding: 15px;
+  background: white;
+}
+.content-plans .plan .header {
+  padding: 15px;
+  text-align: center;
+  background: #22c55e;
+  color: white;
+  border: 3px solid white;
+  outline: 3px solid #22c55e;
+  margin-bottom: 15px;
+}
+.content-plans .plan:nth-of-type(2) .header {
+  background: #0075ff;
+  outline: 3px solid #0075ff;
+}
+.content-plans .plan:nth-of-type(3) .header {
+  background: #f44336;
+  outline: 3px solid #f44336;
+}
+.content-plans .plan .header h3 {
+font-size: 25px;
+}
+.content-plans .plan .header span {
+display: block;
+font-size: 30px;
+font-weight: bold;
+}
+
+.content-plans .plan .header span sup {
+  position: relative;
+  right: 5px;
+  font-weight: normal;
+}
+.content-plans .plan ul li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0;
+  border-bottom: 1px solid var(--separator-color);
+  text-align: center;
+}
+.content-plans .plan ul li span i {
+  margin-right: 10px;
+  color: #22c55e;
+}
+.content-plans .plan ul li span i.red {
+  color: #f44336;
+}
+.content-plans .plan ul li a {
+  color: var(--text-color);
+}
+.content-plans .plan > a {
+  display: inline-block;
+  background: #22c55e;
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.content-plans .plan:nth-of-type(2) > a {
+  background: #0075ff;
+}
+.content-plans .plan:nth-of-type(3) > a {
+  background: #f44336;
+}
+.content-plans .plan.current-plan > a {
+  display: none;
+}
+.content-plans .plan > p {
+  text-align: center;
+  color: var(--text-color);
+  margin-top: 20px;
+}
+.content-plans .plan:not(.current-plan) > p {
+  display: none;
 }
